@@ -1,4 +1,5 @@
 23-06-2004 Qball <Qball@qballcow.nl>
+	* removed the need of info.playlist in id3info and the popup/tray icon
 	* middle mouse click on tray-icon pauses/plays
 
 15-05-2004 Qball <Qball@qballcow.nl>
